<resources>

    <string name="home_login_haveNotAccount">Don\'t have an account？</string>
    <string name="home_login_signup">Sign up</string>
    <string name="home_login_bt_signup">登录</string>
    <string name="home_login_et_hint_phone">手机号</string>
    <string name="home_login_et_hint_pwd">密码</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>