<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/home_main_bk"
    tools:context="com.mycircle.mvvm.v.activity.LoginActivity"
    tools:ignore="ResourceName">

    <Button
        android:id="@+id/bt_login_signup"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_marginBottom="220dp"
        android:background="@drawable/login_bt_shape"
        android:text="@string/home_login_bt_signup"
        android:textColor="@color/home_login_bt_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/tv_login_notice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/home_login_haveNotAccount"
        android:textColor="@color/home_login_haveNotAccount"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_login_signup"
        tools:ignore="HardcodedText,MissingConstraints" />

    <TextView
        android:id="@+id/tv_login_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/home_login_signup"
        android:textColor="@color/home_login_signup"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_login_notice"
        tools:ignore="HardcodedText,MissingConstraints" />

    <ImageButton
        android:id="@+id/ib_login_wechat"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginLeft="90dp"
        android:src="@mipmap/icon_wechart_white"
        app:layout_constraintBottom_toTopOf="@+id/tv_login_notice"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_login_signup"
        tools:ignore="MissingConstraints,SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/ib_login_qq"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginRight="90dp"
        android:src="@mipmap/icon_qq_white"
        app:layout_constraintBottom_toTopOf="@+id/tv_login_notice"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_login_signup"
        tools:ignore="MissingConstraints,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tv_login_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="or"
        android:textColor="@color/home_login_haveNotAccount"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/ib_login_wechat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_login_signup"
        tools:ignore="HardcodedText,MissingConstraints" />


    <ImageButton
        android:id="@+id/ib_logo"
        android:layout_width="65dp"
        android:layout_height="95dp"
        android:layout_marginBottom="200dp"
        android:src="@mipmap/icon_logo_white"
        app:layout_constraintBottom_toTopOf="@+id/bt_login_signup"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,SpeakableTextPresentCheck" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/bt_login_signup"
        app:layout_constraintTop_toBottomOf="@id/ib_logo"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <EditText
                android:id="@+id/et_login_phone_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@android:color/transparent"
                android:ems="10"
                android:hint="@string/home_login_et_hint_phone"
                android:inputType="phone"
                android:minHeight="48dp"
                android:textColor="@color/home_login_text_input"
                android:textColorHint="@color/home_login_text_hint" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <EditText
                android:id="@+id/et_login_pwd_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@android:color/transparent"
                android:ems="10"
                android:hint="@string/home_login_et_hint_pwd"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textColor="@color/home_login_text_input"
                android:textColorHint="@color/home_login_text_hint" />

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_login_span"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/home_login_text_input"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>
